[build-system]
requires      = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name        = 'cogx'
description = 'cog extensions'
version     = '0.0.0'

authors = [
	{name = 'Jacob Koziej', email = 'jacobkoziej@gmail.com'},
]
license = {'text' = 'GPL-3.0-or-later'}

requires-python = '>=3.11'
dependencies = [
	'cogapp',
]

[project.urls]
repo = 'https://github.com/jacobkoziej/cogx'

[project.optional-dependencies]
dev = [
	'black',
	'mdformat-gfm',
	'pip-tools',
	'pre-commit',
	'ruff',
]

[tool.black]
line-length               = 79
skip-string-normalization = true

[tool.pip-tools]
allow-unsafe    = true
generate-hashes = true
strip-extras    = false
upgrade         = true
verbose         = true

[tool.setuptools.packages.find]
where = ['src']
